--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ proto-plus==1.23.0
 protobuf==4.25.3
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
+psycopg2-binary==2.9.6
 pycparser==2.22
 PyJWT==2.8.0
 pyparsing==3.1.2
